--- a/src/Components/countries/countriesServices/CountryService.css
+++ b/src/Components/countries/countriesServices/CountryService.css
@@ -12,6 +12,12 @@
   flex-direction: row-reverse;
 }
 
+.vivek{
+  padding-top: 100px;
+  background-color: #f3ffe3;
+  
+}
+
 .service-text {
   flex: 1;
   display: flex;
@@ -75,5 +81,10 @@
   .service-img img {
     width: 100%;
     /* height: 570px; */
+  }
+
+  .vivek{
+    padding-top: 70px;
+    padding-bottom: 90px;
   }
 }
