--- a/src/Components/MainPage/ServicesComp.css
+++ b/src/Components/MainPage/ServicesComp.css
@@ -20,6 +20,7 @@
     font-size: 18px;
     background-color: var(--primary);
     z-index: 10;
+    padding-block: 10px;
 }
 
 .services-btn:hover{
