--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -1,10 +1,30 @@
-.spain-feature h2 {
-  font-size: 35px;
-  color: #7AB730;
+.europe-feature, 
+.spain-feature
+{
+  width: 85%;
+  margin: auto;
+}
+
+.spain-feature h2,
+.europe-feature h2 {
+    font-size: 35px;
+    color: #7AB730;
+}
+
+.shadow-effect-services{
+  cursor: pointer;
 }
 
 @media screen and (max-width: 600px) {
-  .spain-feature h2 {
-    font-size: 30px;
+  .europe-feature, 
+  .spain-feature
+  {
+    width: 95%;
+    margin: auto;
   }
+
+    .spain-feature h2,
+    .europe-feature h2 {
+        font-size: 30px;
+    }
 }
