--- a/src/Components/MainPage/OurCenter.css
+++ b/src/Components/MainPage/OurCenter.css
@@ -1,57 +1,75 @@
 .myswiper2 {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    /* background-color: aliceblue; */
-    padding-bottom: 100px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  /* background-color: aliceblue; */
+  padding-bottom: 100px;
+}
+
+.swiper-slide-2 {
+  height: 100%;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  background-color: beige;
+
+  /* Center slide text vertically */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  /* height: 100%; */
+  object-fit: cover;
+}
+
+.slider-controler-startups {
+  position: absolute;
+  bottom: 30px;
+  width: 100%;
+  height: 20px;
+}
+.slider-arrow-startups {
+  height: 50px;
+  width: 50px;
+  border: 2px solid #7ab730;
+  background-color: #7ab730;
+  padding: 8px;
+  z-index: 10;
+}
+
+.swiper-button-next {
+  left: 50.5%;
+}
+
+.swiper-button-prev {
+  left: 45.5%;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .swiper-button-next {
+    left: 51.5%;
   }
-  
-  .swiper-slide-2 {
-    height: 100%;
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    background-color: beige;
-  
-    /* Center slide text vertically */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
+  .swiper-button-prev {
+    left: 35.5%;
   }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    /* height: 100%; */
-    object-fit: cover;
-  }
-  
-  .slider-controler-startups{
-      position: absolute;
-      bottom: 30px;
-      width: 100%;
-      height: 20px;
-    }
+
   .slider-arrow-startups {
-    height: 50px;
-    width: 50px;
-    border: 2px solid #7AB730;
-    background-color: #7AB730;
+    height: 40px;
+    width: 40px;
+    border: 2px solid #7ab730;
+    background-color: #7ab730;
     padding: 8px;
     z-index: 10;
   }
-  
-  .swiper-button-next {
-    left: 51%;
-  }
-  
-  .swiper-button-prev {
-    left: 45%;
-  }
-  
-  .swiper-button-prev::after,
-  .swiper-button-next::after {
-    display: none;
-  }
-  
+}
