--- a/src/Components/countries/countriesServices/CountryService.css
+++ b/src/Components/countries/countriesServices/CountryService.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 80px;
+  gap: 150px;
   margin-bottom: 100px;
 }
 
@@ -12,22 +12,25 @@
   flex-direction: row-reverse;
 }
 
-.vivek{
+.vivek {
   padding-top: 100px;
-  background-color: #f3ffe3;
-  margin-bottom: 70px;
-  
+  padding-bottom: 20px;
+  /* background-color: #f3ffe3; */
+  /* margin-bottom: 70px; */
+
 }
 
 .service-text {
-  flex: 1;
+  /* flex: 1; */
   display: flex;
   flex-direction: column;
   gap: 15px;
-  font-size: 1.1rem;
+  /* font-size: 1.1rem; */
 }
 
-.service-text ul{
+.service-text ul {
+  display: flex;
+  flex-direction: column;
   gap: 20px;
 }
 
@@ -84,7 +87,7 @@
     /* height: 570px; */
   }
 
-  .vivek{
+  .vivek {
     padding-top: 70px;
     padding-bottom: 90px;
   }
