--- a/src/Components/MainPage/Carousel.css
+++ b/src/Components/MainPage/Carousel.css
@@ -40,16 +40,6 @@
     background-size: cover;
 }
 
-/* 
-.hero-page-img-5 {
-    width: 100vw;
-    height: 100%;
-
-    background-image: url("../../../public/img/Hero.jpg");
-    background-position: 0% 30%;
-    background-size: cover;
-} */
-
 @media screen and (max-width: 1084px) and (min-width: 600px) {
     .hero-page-img-1 {
         background-position: 30% 50%;
@@ -75,5 +65,10 @@
 
     .hero-page-img-3 {
         background-position: 30% 0%;
+    }
+
+    .hero-txt {
+        margin-top: 0px;
+        padding: 20px 20px 40px 20px;
     }
 }
